--- a/pagina_b.html
+++ b/pagina_b.html
@@ -33,8 +33,11 @@
         <div class="g-col-8">
             <h2 class="tituloform">Recuperar Dados</h2>
             <p>
-              <button onclick="recuperarDados()">Recuperar Dados</button>
+              <input onclick="mostrarDados()" class="enviar" type="submit" id="enviar" value="enviar">
             </p>
+            <p id="titulo"></p>
+            <p id="ncompleto"></p>
+            <p id="multiplicacao"></p>
         </div>
       </div>
     </div>
