--- a/pagina_a.html
+++ b/pagina_a.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,49 +11,49 @@
     <link rel="stylesheet" href="/css/style.css">
 
     <title>Página B</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <img src="/img/xing-icon.svg" alt="Logo" width="55">
-        <a class="navbar-brand" href="#">Projeto 2</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link" href="/index.html">Página A</a>
-              <a class="nav-link" active aria-current="page" href="/pagina_a.html">Página B</a>
-              <a class="nav-link" href="/pagina_b.html">Página C</a>              
-            </div>
+  </head>
+  <body>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <img src="/img/xing-icon.svg" alt="Logo" width="55">
+          <a class="navbar-brand" href="#">Projeto 2</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link" href="/index.html">Página A</a>
+                <a class="nav-link" active aria-current="page" href="/pagina_a.html">Página B</a>
+                <a class="nav-link" href="/pagina_b.html">Página C</a>              
+              </div>
+          </div>
+        </div>
+      </nav>
+      <div class="container">
+        <div class= "grid" style="--bs-columns :12">
+          <div class="g-col-8">
+            <form>
+              <h2 class="tituloform">Coleta de dados</h2>
+              <p><label for="sobrenome">Sobrenome: </label>
+                <input type="text" nome="sobrenome" id="sobrenome" placeholder="Digite seu sobrenome"></p>
+              <p><label for="numero-2">Numero: </label>
+                <input type="number" numero="numero" id="numero-2" placeholder="Digite um numero"></p>
+              <p><input onclick="coletarDadosB()" class="enviar" type="submit" id="enviar" value="enviar"></p>
+            </form>
+          </div>
         </div>
       </div>
-    </nav>
-    <div class="container">
-      <div class= "grid" style="--bs-columns :12">
-        <div class="g-col-8">
-          <form>
-            <h2 class="tituloform">Coleta de dados</h2>
-            <p><label for="sobrenome">Sobrenome: </label>
-               <input type="text" nome="nome" id="sobrenome" placeholder="Digite seu sobrenome"></p>
-            <p><label for="numero-2">Numero: </label>
-              <input type="number" numero="numero" id="numero-2" placeholder="Digite um numero"></p>
-            <p><input onclick="coletarDadosB()" class="enviar" type="submit" id="enviar" value="enviar"></p>
-          </form>
-        </div>
-      </div>
-    </div>
-  
+    
 
-  <!-- Optional JavaScript; choose one of the two! -->
+    <!-- Optional JavaScript; choose one of the two! -->
 
-  <!-- Option 1: Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="/scripts/script.js"></script>
-  <!-- Option 2: Separate Popper and Bootstrap JS -->
-  <!--
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-  -->
-</body>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="/scripts/script.js"></script>
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
