--- a/pagina_b.html
+++ b/pagina_b.html
@@ -42,11 +42,11 @@
               <tbody>
                 <tr>
                   <th scope="row">Nome Completo:</th>
-                  <td><p id="ncompleto"></p></td>
+                  <td id="ncompleto"></td>
                 </tr>
                 <tr>
                   <th scope="row">Multiplicacao:</th>
-                  <td><p id="multiplicacao"></p></td>
+                  <td id="multiplicacao"></td>
                 </tr>
               </tbody>
             </table>
